discussion/kv_engine/181671/181671_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Filter out events in the front end thread

Change-Id: I447e30e2b66cb9e383c5a03e3ea292e6c5aeee3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-24 04:39:21.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-24 04:45:48.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50615/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50615/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42465/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42465/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11218/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11218/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22844/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22844/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23426/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24666/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24666/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23831/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23831/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31851/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31851/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11126/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11126/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21395/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/audit_interface.h:80:46: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    virtual bool put_event(uint32_t eventid, nlohmann::json payload) = 0;
                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21395/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/audit_interface.h:80:46:
error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21395/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20656/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
